# voice-notes

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yml
backend/: .env.example  Dockerfile  pyproject.toml  pytest.ini  voice_notes.db
backend/src/voice_notes/: main.py
backend/src/voice_notes/api/: __init__.py  dependencies.py  health.py  notes.py
backend/src/voice_notes/api/routers/: ai.py  auth.py  chat.py  content.py  ingestion.py  notes.py  speech.py
backend/src/voice_notes/config/: settings.py
backend/src/voice_notes/models/: __init__.py  auth.py  content.py  note.py  user.py  voice_note.py
backend/src/voice_notes/models/ai/: __init__.py  schemas.py
backend/src/voice_notes/models/auth/: __init__.py  schemas.py
backend/src/voice_notes/models/chat/: __init__.py  schemas.py
backend/src/voice_notes/models/content/: __init__.py  db.py  schemas.py
backend/src/voice_notes/models/notes/: __init__.py  db.py  schemas.py
backend/src/voice_notes/models/schemas/: __init__.py  ai.py  auth.py  content.py  notes.py
backend/src/voice_notes/models/shared/: __init__.py  base.py
backend/src/voice_notes/models/users/: __init__.py  db.py  schemas.py
backend/src/voice_notes/repositories/: auth.py  content.py  notes.py
backend/src/voice_notes/services/: ai.py  chat.py  database.py  llm.py  speech.py  vector_store.py
backend/src/voice_notes/workflows/: __init__.py
backend/src/voice_notes/workflows/chat/: graph.py  state.py
backend/src/voice_notes/workflows/ingestion/: graph.py  state.py
backend/tests/: __init__.py  conftest.py
backend/tests/api/: test_ai.py  test_auth.py  test_content.py  test_health.py  test_notes.py  test_speech.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  router.tsx
frontend/src/components/: ThemeToggle.tsx  app-layout.tsx  app-sidebar.tsx  content-wrapper.tsx  voice-notes-wrapper.tsx
frontend/src/components/animate-ui/components/buttons/: theme-toggler.tsx
frontend/src/components/animate-ui/components/radix/: sidebar.tsx
frontend/src/context/: ThemeContext.tsx  themeContextValue.ts
frontend/src/hooks/: useTheme.ts
frontend/src/pages/: chat.tsx  content.tsx  settings.tsx  voice-notes.tsx
src/voice_notes/: __init__.py  main.py
src/voice_notes/config/: __init__.py  settings.py
src/voice_notes/models/: content.py
src/voice_notes/pages/: __init__.py  chat.py  content.py  notes.py
src/voice_notes/services/: __init__.py  database.py
src/voice_notes/utils/: __init__.py
src/voice_notes/workflows/chat/: __init__.py  graph.py  state.py
src/voice_notes/workflows/content/: __init__.py  graph.py  state.py
src/voice_notes/workflows/ingestion/: __init__.py
