[project]
name = "voice-notes"
version = "0.1.0"
description = "Backend application for Voice Notes using FastAPI."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "langchain>=1.2.3",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.5",
    "openai>=2.15.0",
    "openai-whisper>=20250625",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-jose>=3.5.0",
    "sqlmodel>=0.0.31",
    "uvicorn[standard]>=0.40.0",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "ty>=0.0.8",
]

[tool.ruff.lint]
select = [
    "D", # pydocstyle
    "F401", # unused imports
]

[tool.ruff.lint.pydocstyle]
convention = "google"
